--- a/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
+++ b/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
@@ -47,18 +47,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loodos movie main page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmD-Tz-3fQ">
-                                <rect key="frame" x="101.66666666666669" y="415.66666666666669" width="190" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Aramak istediğiniz filmi giriniz🔎" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bOD-PF-Cx7">
+                                <rect key="frame" x="8" y="67" width="377" height="34"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="b5R-aL-6O9">
+                                <rect key="frame" x="8" y="109" width="377" height="709"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ode-iD-ihV"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="nmD-Tz-3fQ" firstAttribute="centerX" secondItem="BtU-z0-4PE" secondAttribute="centerX" id="ih4-pp-7A0"/>
-                            <constraint firstItem="nmD-Tz-3fQ" firstAttribute="centerY" secondItem="BtU-z0-4PE" secondAttribute="centerY" id="lU3-ZK-ZSx"/>
+                            <constraint firstItem="Ode-iD-ihV" firstAttribute="bottom" secondItem="b5R-aL-6O9" secondAttribute="bottom" id="8Ot-9e-aPt"/>
+                            <constraint firstItem="b5R-aL-6O9" firstAttribute="top" secondItem="bOD-PF-Cx7" secondAttribute="bottom" constant="8" id="B31-7N-QEZ"/>
+                            <constraint firstItem="bOD-PF-Cx7" firstAttribute="top" secondItem="Ode-iD-ihV" secondAttribute="top" constant="8" id="C8w-xy-nx5"/>
+                            <constraint firstItem="Ode-iD-ihV" firstAttribute="trailing" secondItem="bOD-PF-Cx7" secondAttribute="trailing" constant="8" id="VzH-6o-Udu"/>
+                            <constraint firstItem="bOD-PF-Cx7" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" constant="8" id="fFv-rW-JFo"/>
+                            <constraint firstItem="b5R-aL-6O9" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" constant="8" id="jfZ-DO-bMy"/>
+                            <constraint firstItem="Ode-iD-ihV" firstAttribute="trailing" secondItem="b5R-aL-6O9" secondAttribute="trailing" constant="8" id="k7B-bh-IaD"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -86,8 +95,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray5Color">
+            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
