--- a/Lodos Movies/App/Components/Cells/MovieTableViewCell/MovieTableViewCell.xib
+++ b/Lodos Movies/App/Components/Cells/MovieTableViewCell/MovieTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="250" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Lodos_Movies" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="250" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Lodos_Movies" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="473" height="321"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -30,7 +30,7 @@
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="TsH-sG-FOW">
                         <rect key="frame" x="226.66666666666666" y="150.66666666666666" width="20" height="20"/>
                     </activityIndicatorView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C6q-nH-26J">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C6q-nH-26J">
                         <rect key="frame" x="8" y="8" width="457" height="200"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="200" id="u5X-q8-N11"/>
