--- a/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
+++ b/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -47,17 +46,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Aramak istediğiniz filmi giriniz🔎" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bOD-PF-Cx7">
-                                <rect key="frame" x="8" y="67" width="377" height="34"/>
-                                <color key="backgroundColor" systemColor="systemGray5Color"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="NLc-Ox-bHE">
                                 <rect key="frame" x="186.66666666666666" y="416" width="20" height="20"/>
                             </activityIndicatorView>
+                            <searchBar contentMode="redraw" placeholder="Lütfen istediğiniz filmi arayın" translatesAutoresizingMaskIntoConstraints="NO" id="mb3-cJ-yUD">
+                                <rect key="frame" x="8" y="67" width="377" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="ypJ-Oa-qSa" id="ISN-Cw-hy7"/>
+                                </connections>
+                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="b5R-aL-6O9">
-                                <rect key="frame" x="8" y="109" width="377" height="709"/>
+                                <rect key="frame" x="8" y="123" width="377" height="695"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -65,18 +65,19 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="NLc-Ox-bHE" firstAttribute="centerY" secondItem="BtU-z0-4PE" secondAttribute="centerY" id="5KZ-l5-RXS"/>
+                            <constraint firstItem="mb3-cJ-yUD" firstAttribute="top" secondItem="Ode-iD-ihV" secondAttribute="top" constant="8" id="7SI-F6-KhH"/>
                             <constraint firstItem="Ode-iD-ihV" firstAttribute="bottom" secondItem="b5R-aL-6O9" secondAttribute="bottom" id="8Ot-9e-aPt"/>
-                            <constraint firstItem="b5R-aL-6O9" firstAttribute="top" secondItem="bOD-PF-Cx7" secondAttribute="bottom" constant="8" id="B31-7N-QEZ"/>
-                            <constraint firstItem="bOD-PF-Cx7" firstAttribute="top" secondItem="Ode-iD-ihV" secondAttribute="top" constant="8" id="C8w-xy-nx5"/>
+                            <constraint firstItem="mb3-cJ-yUD" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" constant="8" id="AgH-OO-7bQ"/>
                             <constraint firstItem="NLc-Ox-bHE" firstAttribute="centerX" secondItem="BtU-z0-4PE" secondAttribute="centerX" id="JMe-jA-WU6"/>
-                            <constraint firstItem="Ode-iD-ihV" firstAttribute="trailing" secondItem="bOD-PF-Cx7" secondAttribute="trailing" constant="8" id="VzH-6o-Udu"/>
-                            <constraint firstItem="bOD-PF-Cx7" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" constant="8" id="fFv-rW-JFo"/>
+                            <constraint firstItem="Ode-iD-ihV" firstAttribute="trailing" secondItem="mb3-cJ-yUD" secondAttribute="trailing" constant="8" id="faw-B3-grz"/>
                             <constraint firstItem="b5R-aL-6O9" firstAttribute="leading" secondItem="Ode-iD-ihV" secondAttribute="leading" constant="8" id="jfZ-DO-bMy"/>
                             <constraint firstItem="Ode-iD-ihV" firstAttribute="trailing" secondItem="b5R-aL-6O9" secondAttribute="trailing" constant="8" id="k7B-bh-IaD"/>
+                            <constraint firstItem="b5R-aL-6O9" firstAttribute="top" secondItem="mb3-cJ-yUD" secondAttribute="bottom" id="uv2-UF-zkK"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="indicator" destination="NLc-Ox-bHE" id="rHS-RO-iCC"/>
+                        <outlet property="searchBarMovie" destination="mb3-cJ-yUD" id="Fg7-yr-oQx"/>
                         <outlet property="tableViewMovies" destination="b5R-aL-6O9" id="gbm-Gt-gTR"/>
                     </connections>
                 </viewController>
@@ -103,9 +104,4 @@
             <point key="canvasLocation" x="-396.18320610687022" y="-27.464788732394368"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemGray5Color">
-            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
