--- a/Lodos Movies/App/Components/Cells/MovieTableViewCell/MovieTableViewCell.xib
+++ b/Lodos Movies/App/Components/Cells/MovieTableViewCell/MovieTableViewCell.xib
@@ -9,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="250" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Lodos_Movies" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="473" height="321"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="659" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="Lodos_Movies" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="527" height="500"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="473" height="321"/>
+                <rect key="frame" x="0.0" y="0.0" width="527" height="500"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Y3-Pb-2lf">
-                        <rect key="frame" x="20" y="11" width="433" height="310"/>
+                        <rect key="frame" x="20" y="11" width="487" height="489"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal">
@@ -28,44 +28,34 @@
                         </connections>
                     </button>
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="TsH-sG-FOW">
-                        <rect key="frame" x="226.66666666666666" y="150.66666666666666" width="20" height="20"/>
+                        <rect key="frame" x="253.66666666666663" y="240" width="20" height="20"/>
                     </activityIndicatorView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C6q-nH-26J">
-                        <rect key="frame" x="8" y="8" width="457" height="200"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="200" id="u5X-q8-N11"/>
-                        </constraints>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C6q-nH-26J">
+                        <rect key="frame" x="8" y="8" width="511" height="484"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G4M-ws-eh3">
-                        <rect key="frame" x="8" y="216" width="457" height="22.666666666666657"/>
-                        <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="16"/>
-                        <color key="textColor" red="1" green="0.058823529409999999" blue="0.058823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="C6q-nH-26J" secondAttribute="trailing" constant="8" id="1il-Vl-I3Y"/>
-                    <constraint firstItem="G4M-ws-eh3" firstAttribute="leading" secondItem="C6q-nH-26J" secondAttribute="leading" id="3oA-Ar-Kpx"/>
                     <constraint firstItem="C6q-nH-26J" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="5C1-Xk-GX2"/>
                     <constraint firstItem="TsH-sG-FOW" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="8Dg-h5-gzo"/>
                     <constraint firstItem="TsH-sG-FOW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="EDY-6T-hlg"/>
                     <constraint firstItem="C6q-nH-26J" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Grz-3c-m8y"/>
-                    <constraint firstItem="G4M-ws-eh3" firstAttribute="top" secondItem="C6q-nH-26J" secondAttribute="bottom" constant="8" id="Gva-px-9MH"/>
                     <constraint firstItem="3Y3-Pb-2lf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="MiH-Is-Mr1"/>
                     <constraint firstAttribute="bottom" secondItem="3Y3-Pb-2lf" secondAttribute="bottom" id="TYU-aU-XE8"/>
                     <constraint firstItem="3Y3-Pb-2lf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="WTo-YK-Npo"/>
-                    <constraint firstItem="G4M-ws-eh3" firstAttribute="trailing" secondItem="C6q-nH-26J" secondAttribute="trailing" id="qKL-YI-6Qh"/>
+                    <constraint firstAttribute="bottom" secondItem="C6q-nH-26J" secondAttribute="bottom" constant="8" id="fbX-aE-z0G"/>
                     <constraint firstAttribute="trailingMargin" secondItem="3Y3-Pb-2lf" secondAttribute="trailing" id="ue1-Tf-xDg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="imageViewMovie" destination="C6q-nH-26J" id="5KT-B9-OD8"/>
                 <outlet property="indicatorView" destination="TsH-sG-FOW" id="qfE-wU-Kak"/>
-                <outlet property="labelMovieTitle" destination="G4M-ws-eh3" id="x6J-dC-sEm"/>
+                <outlet property="viewContent" destination="H2p-sc-9uM" id="CxU-5I-ntj"/>
             </connections>
-            <point key="canvasLocation" x="55.725190839694655" y="86.267605633802816"/>
+            <point key="canvasLocation" x="96.946564885496173" y="229.57746478873241"/>
         </tableViewCell>
     </objects>
 </document>
