--- a/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
+++ b/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -100,6 +101,33 @@
             </objects>
             <point key="canvasLocation" x="1450" y="-27"/>
         </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="FUB-MH-Kad">
+            <objects>
+                <viewController storyboardIdentifier="MovieDetailViewController" id="Dot-g2-jxX" customClass="MovieDetailViewController" customModule="Lodos_Movies" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fpR-TO-CRj">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ba3-hA-h4k">
+                                <rect key="frame" x="149.66666666666666" y="415.66666666666669" width="93.666666666666657" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="DWK-aD-TmJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ba3-hA-h4k" firstAttribute="centerY" secondItem="fpR-TO-CRj" secondAttribute="centerY" id="CV4-Dt-afO"/>
+                            <constraint firstItem="Ba3-hA-h4k" firstAttribute="centerX" secondItem="fpR-TO-CRj" secondAttribute="centerX" id="oaV-zN-0xX"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jCo-tq-3Ry" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2285" y="-27"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="5l3-UH-UFK">
             <objects>
@@ -119,4 +147,9 @@
             <point key="canvasLocation" x="-396.18320610687022" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
