--- a/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
+++ b/Lodos Movies/App/Storyboards/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5aq-Ea-Mda">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5aq-Ea-Mda">
                                 <rect key="frame" x="8" y="67" width="377" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="SkD-gL-WrD"/>
@@ -118,7 +118,6 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="iIm-qn-uHe">
                                 <rect key="frame" x="8" y="325" width="377" height="493"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -150,6 +149,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="constraitImageHeight" destination="SkD-gL-WrD" id="3G9-B1-3nC"/>
                         <outlet property="imageViewMovie" destination="5aq-Ea-Mda" id="2ME-h4-5l4"/>
                         <outlet property="indicatorView" destination="RKN-1l-Je0" id="K7K-zA-136"/>
                         <outlet property="labelNotFetchedMovie" destination="YHe-gj-Mb0" id="uJ6-Js-EKf"/>
